// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Correctly - Events 1`] = `
<main>
  <back-arrow-stub
    to="/"
  />
   
  <h1
    class="mx-10 mb-1 px-1"
  >
    Events
  </h1>
   
  <div
    class="mx-12 mb-3"
  >
    <router-link-stub
      class="button"
      tag="button"
      to="/events/create"
    >
      Create Event
    </router-link-stub>
     
    <button
      class="button"
    >
      
      Import Archive
    
    </button>
     
    <button
      class="button"
    >
      Refresh
    </button>
  </div>
   
  <div
    class="my-shadow mx-12 mb-3 p-2"
  >
    <table
      class="w-full font-body"
    >
      <tr
        class="font-heading text-center hover:bg-blue-light"
      >
        <th>
          Event Name
        </th>
         
        <th>
          Event Date
        </th>
      </tr>
       
      <router-link-stub
        class="text-center even:bg-blue-lightest hover:bg-blue-light"
        tag="tr"
        to="/events/1"
      >
        <td>
          Test
        </td>
         
        <td>
          1/2/3
        </td>
      </router-link-stub>
      <router-link-stub
        class="text-center even:bg-blue-lightest hover:bg-blue-light"
        tag="tr"
        to="/events/2"
      >
        <td>
          Testing
        </td>
         
        <td>
          36/22/11
        </td>
      </router-link-stub>
      <router-link-stub
        class="text-center even:bg-blue-lightest hover:bg-blue-light"
        tag="tr"
        to="/events/3"
      >
        <td>
          Event
        </td>
         
        <td>
          5/6/9
        </td>
      </router-link-stub>
    </table>
  </div>
</main>
`;

exports[`Renders Correctly - No Events 1`] = `
<main>
  <back-arrow-stub
    to="/"
  />
   
  <h1
    class="mx-10 mb-1 px-1"
  >
    Events
  </h1>
   
  <div
    class="mx-12 mb-3"
  >
    <router-link-stub
      class="button"
      tag="button"
      to="/events/create"
    >
      Create Event
    </router-link-stub>
     
    <button
      class="button"
    >
      
      Import Archive
    
    </button>
     
    <button
      class="button"
    >
      Refresh
    </button>
  </div>
   
  <!---->
</main>
`;
